--- a/client/perfis/views/recuperar-senha.ng.html
+++ b/client/perfis/views/recuperar-senha.ng.html
@@ -1,7 +1,7 @@
 <div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
     <div class="login-home frame-form text-center space-header space-footer">
         <form class="login-form frame-spaces">
-            <div class="row">
+            <div>
                 <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
 
                 <h4 class="text-center margin-top-30">Preencha o campo abaixo para recuperar sua senha</h4><br>
