--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -1,7 +1,7 @@
 <div class="col-lg-5 col-md-6 col-sm-7 col-xs-11 float-none center-block">
     <div class="login-home frame-form text-center space-header space-footer">
         <form class="login-form frame-spaces">
-            <div class="row">
+            <div>
                 <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
 
                 <h4 class="text-center margin-top-30">Bem-vindo ao sistema de gestão de mentorias</h4><br>
@@ -11,7 +11,7 @@
                 <!-- end six columns-->
             </div>
             <!-- end row-->
-            <div class="row" style="margin-top:50px;">
+            <div style="margin-top:50px;">
 
                 <div class="col-lg-8 col-md-8">
                     <a id="button-login-linkedIn" class="btn btn-default  btn-100-percent">
