- Commit ligado a issue #46. Correção na Progressive Bar.

--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -60,7 +60,7 @@
 
                 <div class="">
                     <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
-                        <li class="active"></li>
+                        <li><span class="active"></span></li>
                         <li></li>
                         <li></li>
                         <li></li>
@@ -85,8 +85,8 @@
                 </div>
 
                 <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
-                    <li class="active"></li>
-                    <li class="active"></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
                     <li></li>
                     <li></li>
                 </ul>
@@ -126,9 +126,9 @@
                 </div>
 
                 <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
                     <li></li>
                 </ul>
 
@@ -180,10 +180,10 @@
                 </div>
 
                 <ul class="progressbar margin-top-30 col-lg-8 float-none center-block">
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
+                    <li><span class="active"></span></li>
                 </ul>
 
             </div>
