--- a/client/perfis/views/painel-controle.ng.html
+++ b/client/perfis/views/painel-controle.ng.html
@@ -1,133 +1,277 @@
-<div class="container" id="painel-controle">
+<div class="container margin-top-30" id="painel-controle">
 
-    <div class="col-md-5">
-        <div class="col-md-6">
-            <h3>Empresas</h3>
+    <div class="col-md-5 no-padding">
+        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
+            <h3 class="text-center">Empresas</h3>
 
-            <div id="lista-empresas" class="lista">
-                <div><span class="col-md-3">A</span><span class="col-md-9"></span></div>
-                <div>B</div>
-                <div>C</div>
-                <div>D</div>
-                <div>E</div>
-                <div>F</div>
-                <div>
-                    <span class="col-md-3">G</span>
-                    <span class="col-md-9"></span>
-                </div>
-                <div class="item">
-                    <div class="col-md-3">
+            <ul id="lista-empresas" class="lista">
+                <li>
+                    <div>A</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>B</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>C</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>D</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>E</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>F</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>S</div>
+                    <div></div>
+                </li>
+                <li class="item">
+                    <div>
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
-                    <div class="col-md-9">
+                    <div>
                         <h5>Gist</h5>
 
                         <p>Soluções em Games</p>
                     </div>
-                </div>
-                <div>H</div>
-                <div>I</div>
-                <div>J</div>
-                <div>K</div>
-                <div>L</div>
-                <div>M</div>
-                <div>N</div>
-                <div>O</div>
-                <div>P</div>
-                <div>Q</div>
-                <div>R</div>
-                <div>S</div>
-                <div>T</div>
-                <div>U</div>
-                <div>V</div>
-                <div>W</div>
-                <div>X</div>
-                <div>Y</div>
-                <div>Z</div>
-            </div>
+                </li>
+                <li>
+                    <div>H</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>I</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>J</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>K</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>L</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>M</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>N</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>O</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>P</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Q</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>R</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>S</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>T</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>U</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>V</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>W</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>X</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Y</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Z</div>
+                    <div></div>
+                </li>
+            </ul>
         </div>
-        <div class="col-md-6">
-            <h3>Usuários</h3>
+        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
+            <h3 class="text-center">Usuários</h3>
 
-            <div id="lista-usuarios" class="lista">
-                <div><span>A</span><span class="col-md-9"></span></div>
-                <div>B</div>
-                <div>C</div>
-                <div>D</div>
-                <div>E</div>
-                <div>F</div>
-                <div><span class="col-md-3">G</span><span class="col-md-9"></span></div>
-                <div class="item">
-                    <div class="col-md-3">
+            <ul id="lista-usuarios" class="lista">
+                <li>
+                    <div>A</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>B</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>C</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>D</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>E</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>F</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>S</div>
+                    <div></div>
+                </li>
+                <li class="item">
+                    <div>
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
-                    <div class="col-md-9">
+                    <div>
                         <h5>Gist</h5>
 
                         <p>Soluções em Games</p>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="col-md-3">
-                        <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-9">
-                        <h5>Gist</h5>
-
-                        <p>Soluções em Games</p>
-                    </div>
-                </div>
-                <div>H</div>
-                <div>I</div>
-                <div>J</div>
-                <div>K</div>
-                <div>L</div>
-                <div>M</div>
-                <div>N</div>
-                <div>O</div>
-                <div>P</div>
-                <div>Q</div>
-                <div>R</div>
-                <div>S</div>
-                <div>T</div>
-                <div>U</div>
-                <div>V</div>
-                <div>W</div>
-                <div>X</div>
-                <div>Y</div>
-                <div>Z</div>
-            </div>
+                </li>
+                <li>
+                    <div>H</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>I</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>J</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>K</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>L</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>M</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>N</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>O</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>P</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Q</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>R</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>S</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>T</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>U</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>V</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>W</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>X</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Y</div>
+                    <div></div>
+                </li>
+                <li>
+                    <div>Z</div>
+                    <div></div>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="col-md-7">
-        <h3>Trajetórias</h3>
+    <div class="col-md-7 no-padding">
+        <h3 class="text-center">Trajetórias</h3>
 
-        <div>
-            <div>
-                <div>
+        <div id="trajetorias">
+            <div class="col-md-12">
+                <div class="col-md-3">
                     <div>
-                        <div class="col-md-3">
+                        <div class="col-md-5 no-padding">
                             <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-7">
                             <h5>Gist</h5>
 
                             <p>Soluções em Games</p>
                         </div>
                     </div>
+                    <hr/>
                     <div>
-                        <div class="col-md-3">
+                        <div class="col-md-5 no-padding">
                             <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                         </div>
-                        <div class="col-md-9">
-                            <h5>Gist</h5>
+                        <div class="col-md-7">
+                            <h5>Renam Moreira</h5>
 
-                            <p>Soluções em Games</p>
+                            <p>Empreendedor / Lider</p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h5>Solicitação de Alteração</h5>
+                <div class="col-md-4">
+                    <h5 class="text-center">Solicitação de Alteração</h5>
 
                     <p>Etapa: <strong>Benchmarking</strong></p>
 
@@ -135,13 +279,62 @@
 
                     <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p>
 
-                    <a href="#">Aceitar</a>
-                    <a href="#">Negar</a>
+                    <div class="text-center">
+                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Aceitar</a>
+                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Negar</a>
+                    </div>
                 </div>
-                <div>
-                    <h5>Comentário</h5>
+                <div class="col-md-5">
+                    <h5 class="text-center">Comentário</h5>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit ipsum iure natus
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit
+                        ipsum iure natus
+                        tempora vero vitae!</p>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="col-md-3">
+                    <div>
+                        <div class="col-md-5 no-padding">
+                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                        </div>
+                        <div class="col-md-7">
+                            <h5>Gist</h5>
+
+                            <p>Soluções em Games</p>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div>
+                        <div class="col-md-5 no-padding">
+                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
+                        </div>
+                        <div class="col-md-7">
+                            <h5>Renam Moreira</h5>
+
+                            <p>Empreendedor / Lider</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="text-center">Solicitação de Alteração</h5>
+
+                    <p>Etapa: <strong>Benchmarking</strong></p>
+
+                    <p>Prazo atual: <strong>10/11/2015 a 20/11/2015</strong></p>
+
+                    <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p>
+
+                    <div class="text-center">
+                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Aceitar</a>
+                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Negar</a>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <h5 class="text-center">Comentário</h5>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit
+                        ipsum iure natus
                         tempora vero vitae!</p>
                 </div>
             </div>
