- Commit ligado a issue #44. Adicionar o seletor de Produtos no cadastro de Empresa. Adicionei o seletor, falta acertar o comportamento. A questão vizual acertarei juntamente com a issue #43.

--- a/client/empresa/views/cadastroEmpresa.ng.html
+++ b/client/empresa/views/cadastroEmpresa.ng.html
@@ -9,9 +9,18 @@
                     <div class="margin-top-30">
                         <input type="text" ng-model="nEmpresa.nome" placeholder="Nome Empresa"> <br/><br/>
                         <input type="text" ng-model="nEmpresa.website" placeholder="Website"><br/><br/>
-                        <!--<md-chips ng-model="produtos" readonly="ctrl.readonly">
 
+                        <!--<md-chips ng-model="produtos" readonly="ctrl.readonly">
                         </md-chips> -->
+                        <md-contact-chips
+                                ng-model="produtos"
+                                md-contacts="querySearch($query)"
+                                md-contact-name="name"
+                                md-require-match="true"
+                                md-highlight-flags="i"
+                                filter-selected="filterSelected"
+                                placeholder="Produtos">
+                        </md-contact-chips>
                     </div>
                 </div>
                 <!-- end row-->
