- Commit ligado a issue #40. A tela esta quase pronta, falta apenas o indicador de etapa e alguns detalhes. Já é possivel utilizar-la.

--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -12,7 +12,7 @@
                             <a class="btn btn-default btn-100-percent" href="/cadastroEmpresa">Cadastrar Empresa</a>
                         </div>
                         <br/>
-                        <div class="col-md-7 center-block float-none margin-top-30">
+                        <div class="col-md-7 center-block float-none">
                             <a class="btn btn-default btn-100-percent" href="/perfil">Visualizar Perfil</a>
                         </div>
                     </div>
