--- a/client/perfis/views/perfilDetalhes.ng.html
+++ b/client/perfis/views/perfilDetalhes.ng.html
@@ -8,10 +8,10 @@
 
     Mais info ver: https://github.com/CollectionFS/Meteor-CollectionFS
     -->
-    <div class="col-md-3 profile-boxes">
-    <img src="{{user.profile.profilePic.getFileRecord().url()}}" class="profile-picture">
+    <div class="col-md-3 profile-boxes text-center">
+    <img src="{{user.profile.profilePic.getFileRecord().url()}}" class="profile-picture text-center">
     </div>
-    <div class="col-md-2 profile-boxes">
+    <div class="col-md-2 profile-boxes text-center">
 
         <span style="font-size: 0.87em;">{{profileTitle}}</span>
         <br>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="col-md-2 profile-boxes">
+    <div class="col-md-2 profile-boxes text-center">
       <div class="row">
         <div class="col-md-12" >
           <span><i class="fa fa-star stars"></i></span>
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="col-md-2 profile-boxes">
+    <div class="col-md-2 profile-boxes text-center">
       <p class="text-center">
         {{user.profile.breve_descricao}}
       </p>
