--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -19,7 +19,7 @@
                         <img class="img-button-linkedin " src="../resources/logo-linkedin.png">
                     </a>
                 </div>
-                <div class="margin-top-30 visible-xs visible-sm"></div>
+                <div class="visible-sm visible-xs"><br/></div>
                 <div class="col-lg-4 col-md-4">
                     <a class="btn btn-default  btn-100-percent" ng-click="login(aUser)">Logar</a>
                 </div>
