criação das agendas, estruturação dos objetos validação do registro

--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -10,6 +10,7 @@
                         <input type="text" ng-model="nUser.nome" placeholder="Nome Completo"> <br/><br/>
                         <input type="text" ng-model="nUser.email" placeholder="E-mail"><br/><br/>
                         <input type="password" ng-model="nUser.senha" placeholder="Senha"><br/><br/>
+                        <span>{{error}}</span>
                     </div>
                 </div>
                 <!-- end row-->
