--- a/client/perfis/views/meuPerfil.ng.html
+++ b/client/perfis/views/meuPerfil.ng.html
@@ -66,13 +66,15 @@
 
   <div class="row profile-border" >
     <div class="col-md-4">
-      <div id="calendarioDia">
-      </div>
+      <div class="row profile-border margin-top-30 space-footer">
+        <div id="agendaDia" class="text-center">
+        </div>
+    </div>
     </div>
   <div class="col-md-8 float-right">
 
   <div class="row profile-border margin-top-30 space-footer">
-    <div id="calendar"></div>
+    <div id="agendaMes" class="text-center"></div>
   </div>
   </div>
 </div>
