--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -13,7 +13,7 @@
                         </div>
                         <br/>
                         <div class="col-md-7 center-block float-none">
-                            <a class="btn btn-default btn-100-percent" href="/perfil">Visualizar Perfil</a>
+                            <a class="btn btn-default btn-100-percent" href="/meuPerfil">Visualizar Perfil</a>
                         </div>
                     </div>
                 </div>
