--- a/client/perfis/views/perfilDetalhes.ng.html
+++ b/client/perfis/views/perfilDetalhes.ng.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-2 profile-boxes text-center">
 
-        <span style="font-size: 0.87em;">{{profileTitle}}</span>
+        <span style="font-size: 0.87em;">{{user.profile.tipo_conta}}</span>
         <br>
 
         <span style="font-size: 1.33em;">{{user.profile.name}}</span>
