--- a/client/empresa/views/cadastroEmpresa.ng.html
+++ b/client/empresa/views/cadastroEmpresa.ng.html
@@ -14,8 +14,8 @@
                         </md-chips> -->
                         <md-contact-chips
                                 ng-model="produtos"
-                                md-contacts="querySearch($query)"
-                                md-contact-name="name"
+                                md-contacts="querySearchProdutos($query)"
+                                md-contact-name="nome"
                                 md-require-match="true"
                                 md-highlight-flags="i"
                                 filter-selected="filterSelected"
