imagem funcionando sem recursao

--- a/client/empresa/views/empresaDetails.ng.html
+++ b/client/empresa/views/empresaDetails.ng.html
@@ -1,5 +1,5 @@
-<div class="container">
 
+<div class="container">
   <div class="row profile-border" style="margin-top: 30px;">
 
     <div class="col-md-3 profile-boxes picture no-padding">
@@ -25,6 +25,7 @@
         </div>
       <div class="row">
         <div class="col-md-12">
+          <span>acho que aqui serao as tags</span>
         </div>
       </div>
     </div>
