--- a/client/perfis/views/perfilDetalhes.ng.html
+++ b/client/perfis/views/perfilDetalhes.ng.html
@@ -60,7 +60,7 @@
     <div class="col-md-2 profile-boxes" ng-show="viewEmpreendedor">
       <a href="#" class="btn btn-default profile-actions"><i class="fa fa-commenting-o"></i>Enviar Mensagem<span></span></a>
       <a href="#" class="btn btn-default profile-actions"><i class="fa fa-calendar"></i>Agendar Horário<span></span></a>
-      <a href="#" class="btn btn-default profile-actions"><i class="fa fa-user-plus"></i> Solicitar Mentoria<span></span></a>
+      <a href="#" ng-click="requisitaEvento()" class="btn btn-default profile-actions"><i class="fa fa-user-plus"></i> Solicitar Mentoria<span></span></a>
     </div>
 
   </div>
