--- a/client/empresa/views/cadastroEmpresa.ng.html
+++ b/client/empresa/views/cadastroEmpresa.ng.html
@@ -85,7 +85,7 @@
                                 md-selected-item="selected"
                                 md-search-text="searchText"
                                 md-items="item in nomeUsuarios2"
-                                placeholder="Pick something...">
+                                placeholder="Insira um integrante...">
                                 <md-item-template>{{item}}</md-item-template>
                             </md-autocomplete>
                              <md-chip-template><span><em>{{$chip}}</em></span></md-chip-template>
